2010-03-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Add root-level header to easy library use.
	* include/roboptim/core.hh: New.

2010-03-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Distribute filters in a separate sub-directory.
	* include/Makefile.am: Fix path.
	* include/roboptim/core/filter/cached-function.hh:
	Rename from include/roboptim/core/cached-function.hh.
	* include/roboptim/core/filter/cached-function.hxx:
	Rename from include/roboptim/core/cached-function.hxx.
	* tests/cached-function.cc: Fix include.

2010-03-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Use shared pointers in caching proxy.
	* include/roboptim/core/cached-function.hh,
	* include/roboptim/core/cached-function.hxx: Use shared pointers.
	* tests/cached-function.cc: Update.

2010-03-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Implement function caching.
	* include/Makefile.am: Distribute new header and source.
	* include/roboptim/core/cached-function.hh: New.
	* include/roboptim/core/cached-function.hxx: New.
	* tests/Makefile.am: Compile new test case.
	* tests/cached-function.cc: New.
	* tests/cached-function.stdout: New.
	* tests/testsuite.at: Add new test case.

2010-02-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix parameter code.
	* include/roboptim/core/solver.hxx: Fix getParameter,
	std::map::operator[] is /not/ const (!).
	* src/solver.cc: Fix display code to remove spurious
	pointer display (previously was displaying output stream address).

2010-02-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix typo in source filename.
	* src/Makefile.am: Fix typo.

2010-02-25  Thomas Moulard  <thomas.moulard@gmail.com>

	Implement run-time parameters management.
	* include/roboptim/core/solver.hh,
	* include/roboptim/core/solver.hxx:
	Add parameters related methods.
	* src/Makefile.am: Compile ``solver.cc''.
	* src/roboptim-core-dummy-plugin.cc: Add dummy parameters.
	* src/solver.cc: New.
	* tests/plugin.stdout,
	* tests/simple.stdout: Regenerate.
