@@ -15,8 +15,8 @@
 // You should have received a copy of the GNU Lesser General Public License
 // along with roboptim.  If not, see <http://www.gnu.org/licenses/>.
 
-#ifndef ROBOPTIM_CORE_CACHED_FUNCTION_HH
-# define ROBOPTIM_CORE_CACHED_FUNCTION_HH
+#ifndef ROBOPTIM_CORE_FILTER_CACHED_FUNCTION_HH
+# define ROBOPTIM_CORE_FILTER_CACHED_FUNCTION_HH
 # include <roboptim/core/sys.hh>
 # include <roboptim/core/debug.hh>
 
@@ -28,7 +28,7 @@
 
 namespace roboptim
 {
-  /// \addtogroup roboptim_meta_function
+  /// \addtogroup roboptim_filter
   /// @{
 
   struct ltvector
@@ -111,4 +111,4 @@ namespace roboptim
 } // end of namespace roboptim
 
 # include <roboptim/core/filter/cached-function.hxx>
-#endif //! ROBOPTIM_CORE_CACHED_FUNCTION_HH
+#endif //! ROBOPTIM_CORE_FILTER_CACHED_FUNCTION_HH
